More work on front page

--- a/pages/docs/setup/troubleshooting.mdx
+++ b/pages/docs/setup/troubleshooting.mdx
@@ -1,4 +1,4 @@
-import { Callout } from 'nextra-theme-docs'
+import {Callout} from 'nextra-theme-docs'
 
 # Troubleshooting
 
@@ -7,12 +7,12 @@ import { Callout } from 'nextra-theme-docs'
 ### Basic Spigot Troubleshooting
 
 <Callout type="info" emoji="ℹ️">
-  Kindly check these steps below before asking for support on discord!
+    Kindly check these steps below before asking for support on discord!
 </Callout>
 
 1. Check
-   the [Basic Installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer#basic-installation)
-   steps and see if they're the same for your server
+the [Basic Installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer#basic-installation)
+steps and see if they're the same for your server
 
 2. Remove your ./plugins/SkinsRestorer/plugin.yml & Messages.yml files
 
@@ -23,17 +23,18 @@ import { Callout } from 'nextra-theme-docs'
 <Callout type="info" emoji="ℹ️">
     Still having issues?
     If you are a Basic server owner, you can ask for support on our [Discord](https://skinsrestorer.net/discord).
-    For Advanced owners, feel free to check [Advanced Troubleshoot](#Advanced-Troubleshoot) for what else you can troubleshoot.
+    For Advanced owners, feel free to check [Advanced Troubleshoot](#Advanced-Troubleshoot) for what else you can
+    troubleshoot.
 </Callout>
 
 ### Basic Bungee Troubleshooting
 
 1. Check
-   the [Basic Installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer#installing-Bungee)
-   steps and see if they're the same for your server
+the [Basic Installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer#installing-Bungee)
+steps and see if they're the same for your server
 
 2. IF you *did configure spigot* than *remove the SkinsRestorer config.yml*
-   [SkinsRestorer should never make a config on spigot, if it does your spigot is not set to bungee mode!!]
+[SkinsRestorer should never make a config on spigot, if it does your spigot is not set to bungee mode!!]
 
 3. Update the plugin if needed on bungee [(SpigotMC)](https://spigotmc.org/resources/skinsrestorer.2124/)
 
@@ -42,7 +43,8 @@ import { Callout } from 'nextra-theme-docs'
 <Callout type="info" emoji="ℹ️">
     Still having issues?
     If you are a Basic server owner, you can ask for support on our [Discord](https://skinsrestorer.net/discord).
-    For Advanced owners, feel free to check [Advanced Troubleshoot](#Advanced-Troubleshoot) for what else you can troubleshoot.
+    For Advanced owners, feel free to check [Advanced Troubleshoot](#Advanced-Troubleshoot) for what else you can
+    troubleshoot.
 </Callout>
 
 ## Advanced Troubleshoot
@@ -82,7 +84,7 @@ we also don't support FlameCord as they change the loginresult.Property somehow 
 *SkinsRestorer needs connection to download skin data, you can test your current connection using `/sr status`*
 
 <Callout type="warning" emoji="⚠️">
-  WARNING ABOUT api.github.com? can be ignored for now!
+    WARNING ABOUT api.github.com? can be ignored for now!
 </Callout>
 
 How are you hosting your server?
