--- a/pages/docs/setup/commands-permissions.mdx
+++ b/pages/docs/setup/commands-permissions.mdx
@@ -1,4 +1,4 @@
-import { Callout } from 'nextra-theme-docs'
+import {Callout} from 'nextra-theme-docs'
 
 # Commands and Permissions
 
@@ -9,7 +9,8 @@ If you wish to give a player "`skinsrestorer.command.set.other`" make sure you a
 BOTH `skinsrestorer.command.set` permission and the main "`skinsrestorer.command`" permission
 
 <Callout type="info" emoji="ℹ️">
-    Command not working? Read [installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer)
+    Command not working? Read
+    [installation](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Installing-SkinsRestorer)
 </Callout>
 
 <Callout type="info" emoji="ℹ️">
@@ -62,7 +63,7 @@ The perms can be found
 on [CommandReplacements.java](https://github.com/SkinsRestorer/SkinsRestorerX/blob/stable/shared/src/main/java/net/skinsrestorer/shared/utils/CommandReplacements.java)
 
 - [!] make sure you have the upper-class permission when giving a sub or all when using an additional
-  example:
+example:
 
 ```yml
   - main
