--- a/pages/docs/setup/installing-skinsrestorer.mdx
+++ b/pages/docs/setup/installing-skinsrestorer.mdx
@@ -17,9 +17,9 @@ To be able to use SkinsRestorer on your server, little is needed:
 
 * Java from at least version 8
 * Internet connection through ports 80 (http) & 443 (https) & 53 (dns) (
-  issues? > [troubleshoot connection](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Troubleshoot#connection))
+issues? > [troubleshoot connection](https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Troubleshoot#connection))
 * Minecraft server versions and variants that we
-  support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/master/README.md)]
+support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/master/README.md)]
 
 ## Basic Installation
 
@@ -29,7 +29,8 @@ for Sponge server!
 <Tabs items={['Spigot', 'BungeeCord', 'Sponge', 'Velocity']}>
     <Tab>
         <Callout type="info" emoji="ℹ️">
-            If you're using BungeeCord/Velocity (or any other proxy system), you must follow the [BungeeCord](#installing-Bungee) installation process.
+            If you're using BungeeCord/Velocity (or any other proxy system), you must follow the
+            [BungeeCord](#installing-Bungee) installation process.
         </Callout>
 
         1. Download the latest version from [SpigotMC](https://www.spigotmc.org/resources/skinsrestorer.2124/)
@@ -69,7 +70,7 @@ for Sponge server!
         1. Download the latest version from [SpigotMC](https://www.spigotmc.org/resources/skinsrestorer.2124/)
         2. Place the SkinsRestorer.jar in ./plugins/ folders of every Paper server.
         3. Place the SkinsRestorer.jar in ./plugins/ folder of every Velocity server.
-        4. Check & set on every backend server (paper) paper.yml ->   velocity-support: enabled: true
+        4. Check & set on every backend server (paper) paper.yml -> velocity-support: enabled: true
         5. Restart (/restart or /stop) all servers [Plugman or /reload are NOT supported, use /stop or /end]
         6. You may now Configure SkinsRestorer on Velocity (Velocity plugins folder /plugins/SkinsRestorer)
 
