--- a/pages/docs/setup/commands-permissions.mdx
+++ b/pages/docs/setup/commands-permissions.mdx
@@ -17,7 +17,9 @@ BOTH `skinsrestorer.command.set` permission and the main "`skinsrestorer.command
     Don't use wildcards `"*"` for permissions! It won't work!
 </Callout>
 
-#### Player commands
+## Commands
+
+### Player commands
 
 | Command and aliases           | Description                      | Permissions                           |
 |-------------------------------|----------------------------------|---------------------------------------|
@@ -37,7 +39,7 @@ BOTH `skinsrestorer.command.set` permission and the main "`skinsrestorer.command
 
 - [!] /sr reload ONLY works for some config options; MySQL, for example, needs a FULL RESTART to apply
 
-#### Admin commands
+### Admin commands
 
 | Command and aliases                | Description                       | Permissions                               |
 |------------------------------------|-----------------------------------|-------------------------------------------|
@@ -49,7 +51,7 @@ BOTH `skinsrestorer.command.set` permission and the main "`skinsrestorer.command
 | `/sr props <player>`               | gives the skinprops of the player | `skinsrestorer.admincommand.props`        |
 | `/sr reload`                       | reload config & Locale            | `skinsrestorer.admincommand.reload`       |
 
-#### Per skin perms
+### Per skin perms
 
 Own skin = `skinsrestorer.ownskin`
 
@@ -57,7 +59,7 @@ skin = `skinsrestorer.skin.<name>`
 
 (example: `skinsrestorer.skin.xknat`)
 
-# Permission list
+## Permissions
 
 The perms can be found
 on [CommandReplacements.java](https://github.com/SkinsRestorer/SkinsRestorerX/blob/stable/shared/src/main/java/net/skinsrestorer/shared/utils/CommandReplacements.java)
