--- a/pages/docs/setup/configuration.mdx
+++ b/pages/docs/setup/configuration.mdx
@@ -88,7 +88,7 @@ DefaultSkins:
 ```
 
 Step **2**: Define the default skins. You can set multiple default skins, sadly custom skins from SkinFileGenerator will
-not work (is worked on). The default skins will be given out randomly if you did fill in more than 1 skin. you can do this
+not work (is worked on). The default skins will be given out randomly if you did fill in more than 1 skin. You can do this
 as followed:
 
 ```yml
