--- a/pages/docs/why-skinsrestorer.mdx
+++ b/pages/docs/why-skinsrestorer.mdx
@@ -1,4 +1,4 @@
-### Why should I use SkinsRestorer?
+# Why should I use SkinsRestorer?
 
 SkinsRestorer is the leading project in restoring and setting skins for Minecraft servers configured both online and
 offline mode.
@@ -7,7 +7,7 @@ Role-play servers, large networks, and even small video recording servers use Sk
 
 You don't need a permission plugin to control commands for your players, with SkinRestorer's plug-n-play philosophy.
 
-### Special features
+## Special features
 
 So, what is it in for you?
 
@@ -16,7 +16,7 @@ So, what is it in for you?
 * You can get rid of Steve & Alex skins by changing them to your own default skins.
 * Instant skin change (no rejoin required)
 
-### What else can you do?
+## What else can you do?
 
 When using a 3rd party add-on such as [SkinSystem](https://github.com/SkinsRestorer/SkinSystem), you can now upload
 custom `.png` skins via a web interface, by utilizing the awesome [MineSkin](https://mineskin.org) API!
