Migrate installation instructions

--- a/pages/docs/features/skin-url.mdx
+++ b/pages/docs/features/skin-url.mdx
@@ -1,6 +1,6 @@
 import {Steps} from "nextra-theme-docs";
 
-# Skin Url
+# Skin URL
 
 <Steps>
     ### Confirm a valid skin
@@ -28,7 +28,7 @@ import {Steps} from "nextra-theme-docs";
 
     ### Getting the url
 
-    The Skin Url MUST END WITH .PNG, so make sure that you have the right url!
+    The Skin URL MUST END WITH .PNG, so make sure that you have the right url!
 
     Below you can see the skin I just uploaded to imgur, now right-click on the image and hit "Copy image url"
 
