--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,6 @@
 title: SkinsRestorer
 ---
 
-
 import {useSSG} from 'nextra/ssg';
 
 export const getStaticProps = ({params}) => {
@@ -44,11 +43,7 @@ export const LatestRelease = () => {
                         href={latest.download}
                         className="flex font-semibold items-start text-gray-700 hover:text-gray-900 dark:text-neutral-200 dark:hover:text-neutral-50
                         border border-gray-200 dark:border-neutral-800 rounded-md px-2 py-1 text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 dark:bg-neutral-900 dark:hover:bg-neutral-800
-                        transition duration-150 ease-in-out
-                        focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500
-                        active:bg-gray-100 dark:active:bg-neutral-800
-                        disabled:opacity-50 disabled:cursor-not-allowed
-                        ">Download</a>
+                        transition duration-150 ease-in-out">Download</a>
                 </div>
             </div>
         </div>
