--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,7 @@
+---
+title: SkinsRestorer
+---
+
 import {ArrowDownTrayIcon} from "@heroicons/react/20/solid";
 import {useSSG} from 'nextra/ssg'; import Image from "next/image"; import TimeAgo from "react-timeago";
 
