Fixup imgur page

--- a/pages/docs/features/skin-url.mdx
+++ b/pages/docs/features/skin-url.mdx
@@ -2,25 +2,25 @@ import {Steps} from "nextra-theme-docs";
 
 # Skin URL
 
+### Confirm a valid skin
+
+Make sure the URL your points to only the valid skin.
+A valid skin url should look like this: https://i.imgur.com/QuoWt6B.png
+
+You can see the image below as reference:
+
+![Image explaining the right image format](/assets/imgur/valid-format.png)
+
+### Uploading to imgur
+
+This time we are going to upload your custom skin format to imgur. Follow the following steps:
+
 <Steps>
-    ### Confirm a valid skin
+    ### Download the file
 
-    Make sure the URL your point to contains only the valid skin. A valid skin url should look like
-    this: [https://i.imgur.com/QuoWt6B.png](https://i.imgur.com/QuoWt6B.png)
+    ![Image in download folder](/assets/imgur/download-folder.png)
 
-    You can see the image below as reference:
-
-    ![](https://i.imgur.com/QiVtx7U.png)
-
-    ### Uploading to imgur
-
-    This time we are going to upload your custom skin format to imgur. Follow the following steps:
-
-    **1. Download the file**
-
-    ![](https://i.imgur.com/YMMnFLD.png)
-
-    **2. Go to [https://imgur.com/upload](https://imgur.com/upload)**
+    ### Go to https://imgur.com/upload
 
     Upload the file to **imgur** (see image below)
 
@@ -36,5 +36,5 @@ import {Steps} from "nextra-theme-docs";
 
     ![](https://i.imgur.com/Pzq6dba.png)
 
-    That's it! you can now set the skin by using your IMGUR url!
+    That's it! you can now set the skin by using your **IMGUR** url!
 </Steps>
