--- a/pages/docs/setup/installing-skinsrestorer.mdx
+++ b/pages/docs/setup/installing-skinsrestorer.mdx
@@ -13,7 +13,9 @@ free to ask questions on our [discord server](https://skinsrestorer.net/discord)
 
 To be able to use SkinsRestorer on your server, little is needed:
 
-(note: Most Minecraft server hosting companies have all of this)
+<Callout emoji="📔">
+    Most Minecraft server hosting companies have all of this.
+</Callout>
 
 * Java from at least version 8
 * Internet connection through ports 80 (http) & 443 (https) & 53 (dns) (
