--- a/pages/docs/setup/locale-translations.mdx
+++ b/pages/docs/setup/locale-translations.mdx
@@ -70,7 +70,7 @@ You can download updated translations from our Dev branch here: [[link]](https:/
 If you do not like the default translations, you can customize it to your own liking.
 In this section, you can find an overview of how to locate and info on when which locale is triggered.
 
-### Help mMssages
+### Help Messages
 
 In this section we will explain how you can change the help messages.
 
