--- a/pages/docs/setup/troubleshooting.mdx
+++ b/pages/docs/setup/troubleshooting.mdx
@@ -101,9 +101,9 @@ How are you hosting your server?
 
 When you only have access to a panel like multicraft or cpanel, you aren't able to change firewall settings.
 
-IF you do have access to ssh / root command line, go to -> [Dedi server](#resolve-dedi-server-firewall)
+If you do have access to ssh / root command line, go to -> [Dedicated server](#resolve-dedicated-server-firewall)
 
-Use Below template to create a ticket / send @ to your Minecraft hosting provider
+Use the below template to create a ticket / send @ to your Minecraft hosting provider
 
 ```text
 Firewall issues - this is a email template copied from github:SkinsRestorer/SkinsRestorerX
