--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -1,3 +1,5 @@
+import {Callout} from "nextra-theme-docs";
+
 # Custom Skins
 
 Because SkinsRestorer doesn't have a public API, We have a developed two tools for uploading custom png files to SkinsRestorer!
@@ -9,18 +11,20 @@ Because SkinsRestorer doesn't have a public API, We have a developed two tools f
 We get a lot of questions about how to apply a custom skin, lucky we got you covered!
 
 For small servers we have the following:
-[Skinfile Generator]( https://riflowth.github.io/SkinFile-Generator/)
+[Skinfile Generator](https://skinsrestorer.github.io/SkinFile-Generator/)
 
 This web app allows you to convert .png skin files to .skin files that are used by SkinsRestorer.
 If you use the web application, upload the skin files to the directory where skin data is saved and rename the files to
 the usernames they belong to.
-[[Click here for the Website]](https://riflowth.github.io/SkinFile-Generator/)  [[Click here for the source code]](https://github.com/riflowth/SkinFile-Generator)
+You can find the source code on the [GitHub page](https://github.com/riflowth/SkinFile-Generator).
 
 ### Skin System
 
 If you're a **BIG server network and use a proxy**, we have a website with **AuthMe integration**:
 
-- [!] Requires MYSQL
+<Callout type="info" emoji="ℹ️">
+    Requires MYSQL
+</Callout>
 
 "Skin System"
 This web app allows your players to upload .png skin files to the database that is used by SkinsRestorer to allow
