--- a/pages/docs/misc/incompatibility-list.mdx
+++ b/pages/docs/misc/incompatibility-list.mdx
@@ -4,24 +4,24 @@
 
 Launchers that have built-in skin mods or other game-altering mods that block SkinsRestorer.
 
-* TLauncher
+* `TLauncher`
 
 ## General plugin types causing issues
 
-* Mostly all other skin plugins like myskin
-* Skript (They can hook into skins)
+* Mostly all other skin plugins like `MySKin`
+* `Skript` (They can hook into skins)
 * Custom world plugins
 * Some TabList plugins
 
 ## Plugins that need config change
 
-* FastLogin -> FastLogin config.yml forwardSkin: false
-* MundoSK -> MundoSK config.yml usecustomskins: false
+* `FastLogin` -> FastLogin config.yml forwardSkin: false
+* `MundoSK` -> MundoSK config.yml usecustomskins: false
 
 ## Known plugin list
 
-* AntiBotDeluxe
-* Nicknamer
-* OldCombatMechanics (older versions)
-* Tablisknu
-* WorldChangeScreenRemover
+* `AntiBotDeluxe`
+* `Nicknamer`
+* `OldCombatMechanics` (older versions)
+* `Tablisknu`
+* `WorldChangeScreenRemover`
