--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -2,7 +2,7 @@ import {Callout} from "nextra-theme-docs";
 
 # Custom Skins
 
-Because SkinsRestorer doesn't have a public API, We have a developed two tools for uploading custom png files to SkinsRestorer!
+Because SkinsRestorer doesn't have a public API, We have developed two tools for uploading custom png files to SkinsRestorer!
 
 ## How to generate a custom skin
 
